--- a/src/Quantum Computing.tex
+++ b/src/Quantum Computing.tex
@@ -500,6 +500,7 @@ For instance, the following matrix $S = \rmat{1 & 0 \\ 0 & i}$ is a linear opera
 		\item $(AB)^\dag = B^\dag A^\dag$
 		\item for any scalar $z$ it holds that $(zA)^\dag = \overline z A^\dag$
 		\item $(A^\dag)^\dag = A$
+                \item $(A + B)^\dag = A^\dag + B^\dag$
 	\end{enumerate}
 \end{framedprop}
 
@@ -655,7 +656,12 @@ Now that we defined Hilbert spaces and their operators in great detail, we can f
                 \item the only possible results of measuring $A$ are one of its eigenvalues
                 \item the probability of measuring eigenvalue $\lambda$ in state $v$ is given by $$\Pr[A = \lambda \mid v] = \braket{v|P_\lambda v}$$ where $P_\lambda$ is the linear map that projects $v$ onto the $\lambda$-eigenspace
             \end{itemize}
-        \item \tbf{Time evolution postulate}: a closed system evolves through time according to the Schrödinger equation $$i \hbar \dfrac{\diff}{\diff t} v(t) = Hv(t)$$ where $H$ is the system \tit{Hamiltonian}, a self-adjoint operator that describes the total energy of the system.
+        \item \tbf{Time evolution postulate}: a closed system evolves through time according to the Schrödinger equation $$i \hbar \dfrac{\diff}{\diff t} v(t) = Hv(t)$$ where the elements of this first-order linear differential equation are the following:
+
+            \begin{itemize}
+                \item $v(t)$ is the state vector at time $t$ (a vector in a Hilbert space)
+                \item $H$ is the system \tit{Hamiltonian}, a self-adjoint operator that describes the total energy of the system
+            \end{itemize}
         \item \tbf{Composite systems postulate}: the Hilbert space of a composite system is the tensor product of the Hilbert spaces of its subsystems. In other words, if system $A$ is defined over $\mathcal H_A$, and system $B$ is defined over $\mathcal H_B$, the total system lives in $$\mathcal H_{AB} = \mathcal H_A \otimes \mathcal H_B$$
 \end{enumerate}
 
@@ -685,6 +691,8 @@ Therefore, by adding only the non-zero terms we get that $$\sum_{i = 1}^m{\norm{
                              & = \braket{v | P_\lambda v} & \\ 
     \end{alignedat}
 \end{equation*}
+
+Another postulate that we need to discuss is the third one, regarding the Schrödinger equation. In particular, the solution of the latter is $$v(t_1) = U(t_2, t_1)v(t_1)$$ where $U(t_2, t_1)$ is called \tbf{time-evaluation operator}, and it is defined as follows: $$U(t_2, t_1) = e^{-\tfrac{i}{\hbar}H(t_2 - t_1)}$$ (assuming $H$ does not depend on time). We recall that $H$ is a matrix, so we are raising $e$ to the power of a matrix, an operation that is defined by the power series of the exponential as follows: $$e^A = \sum_{n = 0}^\infty{\dfrac{A^n}{n!}}$$ What is interesting about this operator is that $U$ is \tbf{unitary}, and in order to show it is suffices to prove that $U^\dag = U^{-1}$. But how do we compute the adjoint of $U$? We observe that by the properties of the adjoint operation it holds that $$\rbk{e^A}^\dag = \rbk{\sum_{n = 0}^\infty{\dfrac{A^n}{n!}}}^\dag = \sum_{n = 0}^\infty{\dfrac{(A^n)^\dag}{n!}} = \sum_{n = 0}^\infty{\dfrac{(A^\dag)^n}{n!}} = e^{A^\dag}$$ which means that the adjoint of an exponential is the exponential of the adjoint. This suffices to prove that $$U^\dag = \rbk{e^{-\tfrac{i}{\hbar}H(t_2 - t_1)}}^\dag = e^{\rbk{-\tfrac{i}{\hbar}H(t_2 - t_1)}^\dag} = e^{\tfrac{i}{\hbar}H(t_2 - t_1)} = \rbk{e^{-\tfrac{i}{\hbar}H(t_2 - t_1)}}^{-1} = U^{-1}$$
 
 \printbibliography % UNCOMMENT FOR BIBLIOGRAPHY
 
